--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
     "nprogress": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "recoil": "^0.7.3",
     "sass": "^1.52.2",
-    "simple-oauth2": "^4.3.0"
+    "simple-oauth2": "^4.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
