--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "nprogress": "^0.2.0",
     "react": "18.1.0",
